--- a/labyrinth/labyrinth.vcxproj
+++ b/labyrinth/labyrinth.vcxproj
@@ -169,6 +169,9 @@
   <ItemGroup>
     <ClCompile Include="labyrinth.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Materials.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
