--- a/labyrinth/labyrinth.vcxproj
+++ b/labyrinth/labyrinth.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="drawWorld.h" />
