--- a/labyrinth/labyrinth.vcxproj.filters
+++ b/labyrinth/labyrinth.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="drawWorld.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
