auto random generted labyrinth, ball, simple collision detection

--- a/labyrinth/labyrinth.vcxproj
+++ b/labyrinth/labyrinth.vcxproj
@@ -169,6 +169,8 @@
   <ItemGroup>
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="mazeGeneretor.cpp" />
+    <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +180,8 @@
     <ClInclude Include="drawWorld.h" />
     <ClInclude Include="mainLoop.h" />
     <ClInclude Include="Materials.h" />
+    <ClInclude Include="mazeGenerator.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
