--- a/labyrinth/labyrinth.vcxproj
+++ b/labyrinth/labyrinth.vcxproj
@@ -168,6 +168,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Lamp.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="mazeGeneretor.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="Drawable.h" />
     <ClInclude Include="drawWorld.h" />
     <ClInclude Include="gameLoop.h" />
+    <ClInclude Include="Lamp.h" />
     <ClInclude Include="Materials.h" />
     <ClInclude Include="mazeGenerator.h" />
     <ClInclude Include="Movable.h" />
