--- a/labyrinth/labyrinth.vcxproj
+++ b/labyrinth/labyrinth.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="mazeGeneretor.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Skybox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -182,6 +183,8 @@
     <ClInclude Include="drawWorld.h" />
     <ClInclude Include="gameLoop.h" />
     <ClInclude Include="Ground.h" />
+    <ClInclude Include="Skybox.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="vecLenght.h" />
     <ClInclude Include="Lamp.h" />
     <ClInclude Include="Materials.h" />
